--- a/index.html
+++ b/index.html
@@ -59,6 +59,29 @@
             </ol>
 
         </div>
+        <hr>
+        <div>
+            <h2>Informacações nutricionais</h2>
+            <p>A tabela abaixo mostra os valores nutricionais por porção sem os recheios adicionais.</p>
+            <table>
+                <tr>
+                    <th>Caloria</th>
+                    <td>277kcal</td>
+                </tr>
+                <tr>
+                    <th>Carboidratos</th>
+                    <td>0g</td>
+                </tr>
+                <tr>
+                    <th>Protína</th>
+                    <td>20g</td>
+                </tr>
+                <tr>
+                    <th>Gorduras</th>
+                    <td>22g</td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
