--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Receita de Omelete Simples</h1>
         <p>Um prato fácil e rápido, perfeito para qualquer refeição. Esta omelete clássica combina ovos batidos cozidos à perfeição, opcionalmente recheados com sua escolha de queijo, legumes ou carnes.</p>
     </div>
-    <div>
+    <div class="tempo">
         <h2>tempo de preparo</h2>
         <ul>
             <li>
@@ -30,7 +30,7 @@
             </li>
         </ul>
     </div>
-    <div>
+    <div class="ingredientes"> 
         <h2>Ingredientes</h2>
         <ul>
           <li>2-3 ovos grandes</li>
@@ -40,7 +40,7 @@
           <li>Recheios opcionais: queijo, legumes picados,carnes cozidas, ervas.</li>
         </ul>
         <hr>
-        <div>
+        <div class="modo"> 
             <h2>Modo de preparo</h2>
             <ol>
                 <li>
@@ -65,7 +65,7 @@
 
         </div>
         <hr>
-        <div>
+        <div class="informacoes">
             <h2>Informacações nutricionais</h2>
             <p>A tabela abaixo mostra os valores nutricionais por porção sem os recheios adicionais.</p>
             <table>
